# apps/api/src/platform/platform.module.ts
@@ -1,0 +1,10 @@
+import { Module } from '@nestjs/common';
+import { PlatformController } from './platform.controller';
+import { PlatformService } from './platform.service';
+
+@Module({
+  controllers: [PlatformController],
+  providers: [PlatformService],
+  exports: [PlatformService]
+})
+export class PlatformModule {}
